--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=E-HR
-spring.datasource.url=jdbc:mysql://localhost:3306/u516822144_smartAiHr
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/u516822144_smartAiHr
+#spring.datasource.username=root
+#spring.datasource.password=1234
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:DEBUG}
 #spring.datasource.url=jdbc:mysql://193.203.166.22:3306/u516822144_smartAiHr
 #spring.datasource.username=u516822144_sahsravani001
 #spring.datasource.password=@v4Zr|sgYH4
-#spring.datasource.url=jdbc:mysql://147.79.71.46:3306/u516822144_smartAiHr
-#spring.datasource.username=sravani
-#spring.datasource.password=SmartAiHr@123
+spring.datasource.url=jdbc:mysql://147.79.71.46:3306/u516822144_smartAiHr
+spring.datasource.username=sravani
+spring.datasource.password=SmartAiHr@123
 server.port=8084
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,6 +27,8 @@ spring.mail.username=p.devamatha2001@gmail.com
 spring.mail.password=wzut htxw umcu aqrz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+server.error.whitelabel.enabled=false
 server.error.include-message=always
 server.error.include-binding-errors=always
+
 
