--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,24 @@
 spring.application.name=E-HR
-#spring.datasource.url=jdbc:mysql://localhost:3306/u516822144_smartAiHr
-#spring.datasource.username=root
-#spring.datasource.password=1234
-logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:DEBUG}
-#spring.datasource.url=jdbc:mysql://193.203.166.22:3306/u516822144_smartAiHr
-#spring.datasource.username=u516822144_sahsravani001
-#spring.datasource.password=@v4Zr|sgYH4
+#logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:DEBUG}
+
+
+# Primary DataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://147.79.71.46:3306/u516822144_smartAiHr
 spring.datasource.username=sravani
 spring.datasource.password=SmartAiHr@123
+
+# Secondary DataSource
+second.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+second.datasource.url=jdbc:mysql://46.202.181.9:3306/u805212975_adminuttishtha
+second.datasource.username=u805212975_sravani
+second.datasource.password=Admin1@uttishtha.com
+
+
 server.port=8084
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=465
-#spring.mail.username=p.devamatha2001@gmail.com
-#spring.mail.password=wzut htxw umcu aqrz
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
