latest change feb 02

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ second.datasource.password=Admin1@uttishtha.com
 
 server.port=8084
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+management.endpoints.web.exposure.include=*
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mail.properties.mail.smtp.ssl.trust=*
@@ -30,4 +32,6 @@ server.error.whitelabel.enabled=false
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 
